--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=12345
 
 spring.mail.host=smtp.mail.ru
 spring.mail.username=iyti53@mail.ru
-spring.mail.password=3Et-qEV-3dU-cuh
+spring.mail.password=password
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
