--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
+# Database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/testing?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
 
+# Email
 spring.mail.host=smtp.mail.ru
 spring.mail.username=iyti53@mail.ru
-spring.mail.password=password
+spring.mail.password=3Et-qEV-3dU-cuh
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+# Captcha
+recaptcha.secret=6LdXX3QaAAAAAJuY6IdhuCZ8TxH2MAT6mBo1sGw_
