--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=12345
 # Email
 spring.mail.host=smtp.mail.ru
 spring.mail.username=iyti53@mail.ru
-spring.mail.password=fYz-SDH-vs7-J82
+spring.mail.password=
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
