--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 # Database
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/testing?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
 
 # Email
 spring.mail.host=smtp.mail.ru
 spring.mail.username=iyti53@mail.ru
-spring.mail.password=
+spring.mail.password=i^rOaRudPI32
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
