--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.generate-ddl=false
 # Email
 spring.mail.host=smtp.mail.ru
 spring.mail.username=iyti53@mail.ru
-spring.mail.password=i^rOaRudPI32
+spring.mail.password=
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
