Фиксирование ошибок, комментирование кода

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.generate-ddl=false
 
 # Email
 spring.mail.host=smtp.mail.ru
-spring.mail.username=iyti53@mail.ru
-spring.mail.password=
+spring.mail.username=email
+spring.mail.password=password
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
