--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.generate-ddl=false
 
 # Email
 spring.mail.host=smtp.mail.ru
-spring.mail.username=vyazgd@mail.ru
-spring.mail.password=1U4uRyt^ouPO
+spring.mail.username=
+spring.mail.password=
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
@@ -21,5 +21,3 @@ recaptcha.secret=6LdXX3QaAAAAAJuY6IdhuCZ8TxH2MAT6mBo1sGw_
 upload.path=D:/1_Java/1/1WEB/0MyProjects/3. Testing/uploads
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-server.port=9000
