Студент может просматривать свои ответы за тест. Учитель также может смотреть и за КР.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ mail.debug=true
 # Captcha
 recaptcha.secret=6LdXX3QaAAAAAJuY6IdhuCZ8TxH2MAT6mBo1sGw_
 
-# File
+# Files
 upload.path=D:/1_Java/1/1WEB/0MyProjects/3. Testing/uploads
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
